Misc
Mixin events: EntityLoadFailedEvent, GrindstoneAcceptItemEvent
NaUtilsContainerStatics refactor
Some library methods
Removed some deprecated api use